# vigil-cryptographicsign

./: AGENT_GUARD.md  ARCHITECTURE.md  CLI.md  DISTRIBUTION.md  Dockerfile  PROJECT_COMPLETE.md  PUBLISH.md  PUBLISH_SUMMARY.txt  PyPI_README.md  QUICKSTART.md  README.md  READY_TO_PUBLISH.txt  main.py  pyproject.toml  requirements.txt  setup.py  test_vigil.py  verify_receipt.py
cli/: __init__.py  client.py  config.py  vigil.py
cli/commands/: __init__.py  guard.py  prove.py  status.py  verify.py
host/: __init__.py  api.py
scripts/: publish-check.sh
trusted_core/: __init__.py  audit_log.py  execution_receipt.py  key_manager.py  signer.py
vigil_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
