[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigil-cli"
version = "0.1.0"
description = "CLI wrapper for Vigil cryptographic proof service. Request and verify cryptographic proofs for agent actions."
readme = "PyPI_README.md"
requires-python = ">=3.9"
authors = [
    {name = "Vigil Team"}
]
keywords = ["cryptography", "proof", "agents", "audit", "signatures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Documentation = "https://github.com/rom-mvp/vigil-cryptographicsign#readme"
Source = "https://github.com/rom-mvp/vigil-cryptographicsign"
Tracker = "https://github.com/rom-mvp/vigil-cryptographicsign/issues"

[project.scripts]
vigil = "cli.vigil:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["cli", "cli.commands"]
